--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -18,22 +18,13 @@
         <a href="./objetivos.html">objetivos</a>
     </nav>
     
-
     <main>
-        <h1>GUILHERME SALAZAR DA SILVA</h1>
-        <h3>RUA ADOLFO KAUTZMAN, 93. SAPIRANGA-RS
-            <a href="mailto:guisalazarr@gmail.com">guisalazarr@gmail.com</a>    
-            51 981175661
-        </h3>
-        <p>Aqui vai a minha descrição</p>
+            <ol type="a">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ol>
     </main>
-
-    <footer>
-        <a href="https://www.instagram.com/guisalazarr_">instagram</a>
-        <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/">linkedin</a>
-        <a href="https://twitter.com/guisalazarr">twitter</a>
-        <a href="https://github.com/Guisalazarr">GitHub</a>
-    </footer>
-
+  
 </body>
 </html>
