--- a/objetivos.html
+++ b/objetivos.html
@@ -17,23 +17,15 @@
         <a href="./conhecimentos.html">Conhecimentos</a>
         <a href="./objetivos.html">objetivos</a>
     </nav>
-    
 
     <main>
-        <h1>GUILHERME SALAZAR DA SILVA</h1>
-        <h3>RUA ADOLFO KAUTZMAN, 93. SAPIRANGA-RS
-            <a href="mailto:guisalazarr@gmail.com">guisalazarr@gmail.com</a>    
-            51 981175661
-        </h3>
-        <p>Aqui vai a minha descrição</p>
+        <ul>
+            <li>Ingressar no mercado de Desenvolvimento Web</li>
+            <li>Trabalhar em uma multi nacional</li>
+            <li>Conquistar minha liberdade financeira</li>
+            <li>Morar no exterior</li>
+        </ul>
     </main>
-
-    <footer>
-        <a href="https://www.instagram.com/guisalazarr_">instagram</a>
-        <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/">linkedin</a>
-        <a href="https://twitter.com/guisalazarr">twitter</a>
-        <a href="https://github.com/Guisalazarr">GitHub</a>
-    </footer>
-
+  
 </body>
 </html>
