--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <a href="mailto:guisalazarr@gmail.com">guisalazarr@gmail.com</a>    
             51 981175661
         </h3>
-        <p>Aqui vai a minha descrição</p>
+        <p> Eu sou uma pessoa calma divertida e objetiva. Foco e disciplina são qualidades que
+            busco me aperfeiçoar a cada dia.
+        </p>
     </main>
 
     <footer>
