--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </main>
 
     <footer>
-        <a href="https://www.instagram.com/guisalazarr_">instagram</a>
-        <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/">linkedin</a>
-        <a href="https://twitter.com/guisalazarr">twitter</a>
-        <a href="https://github.com/Guisalazarr">GitHub</a>
+        <a href="https://www.instagram.com/guisalazarr_" target="_blank"> instagram</a>
+        <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/" target="_blank">linkedin</a>
+        <a href="https://twitter.com/guisalazarr" target="_blank">twitter</a>
+        <a href="https://github.com/Guisalazarr" target="_blank">GitHub</a>
     </footer>
 
 </body>
