--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -13,9 +13,9 @@
     </header>
 
     <nav>
-        <a href="./index.html">Sobre</a>
-        <a href="./conhecimentos.html">Conhecimentos</a>
-        <a href="./objetivos.html">objetivos</a>
+        <a href="./index.html">Sobre</a> <br>
+        <a href="./conhecimentos.html">Conhecimentos</a> <br>
+        <a href="./objetivos.html">objetivos</a> <br>
     </nav>
     
     <main>
