--- a/objetivos.html
+++ b/objetivos.html
@@ -13,17 +13,17 @@
     </header>
 
     <nav>
-        <a href="./index.html">Sobre</a>
-        <a href="./conhecimentos.html">Conhecimentos</a>
-        <a href="./objetivos.html">objetivos</a>
+        <a href="./index.html">Sobre</a> <br>
+        <a href="./conhecimentos.html">Conhecimentos</a> <br>
+        <a href="./objetivos.html">objetivos</a> <br>
     </nav>
 
     <main>
         <ul>
-            <li>Ingressar no mercado de Desenvolvimento Web</li>
-            <li>Trabalhar em uma multi nacional</li>
-            <li>Conquistar minha liberdade financeira</li>
-            <li>Morar no exterior</li>
+            <li>Ingressar no mercado de Desenvolvimento Web.</li>
+            <li>Trabalhar em uma multi nacional.</li>
+            <li>Conquistar minha liberdade financeira.</li>
+            <li>Morar no exterior.</li>
         </ul>
     </main>
   
