--- a/index.html
+++ b/index.html
@@ -4,38 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Index</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <img src="./images/foto1.jpg" alt="foto">
-    </header>
-
-    <nav>
-        <a href="./index.html">Sobre</a> <br>
-        <a href="./conhecimentos.html">Conhecimentos</a> <br>
-        <a href="./objetivos.html">objetivos</a> <br>
-    </nav>
     
+    <div class="bloco1">
+        <img class="foto" src="./images/foto1.jpg" alt="foto">
+        <br>
+        
+        <a href="./index.html">SOBRE</a> <br>
+        <a href="./conhecimentos.html">CONHECIMENTOS</a> <br>
+        <a href="./objetivos.html">OBJETIVOS</a> <br>
+    </div>
 
-    <main>
-        <h1>GUILHERME SALAZAR DA SILVA</h1>
-        <h3>RUA ADOLFO KAUTZMAN, 93. SAPIRANGA-RS
-            <a href="mailto:guisalazarr@gmail.com">guisalazarr@gmail.com</a>    
-            51 981175661
-        </h3>
-        <p> Eu sou uma pessoa calma divertida e objetiva. Foco e disciplina são qualidades que
-            busco me aperfeiçoar a cada dia.
-        </p>
-    </main>
+    <div class="bloco2">
 
-    <footer>
-        <a href="https://www.instagram.com/guisalazarr_" target="_blank"> instagram</a>
-        <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/" target="_blank">linkedin</a>
-        <a href="https://twitter.com/guisalazarr" target="_blank">twitter</a>
-        <a href="https://github.com/Guisalazarr" target="_blank">GitHub</a>
-    </footer>
-
+            <h1>GUILHERME <span>SALAZAR DA SILVA</span></h1>
+            <h3>RUA ADOLFO KAUTZMAN, 93. SAPIRANGA-RS
+            <a href="http://guisalazarr@gmail.com" target="_blank"><span>GUISALAZARR@GMAIL.COM</span></a>       
+                51 981175661
+            </h3>
+            <p> Eu sou uma pessoa calma divertida e objetiva. Foco e disciplina são qualidades que
+                busco me aperfeiçoar cada dia mais.
+            </p>
+        <div>
+            <a href="https://www.instagram.com/guisalazarr_" target="_blank">
+                <img class="link-icon" src="./images/icon-instagram.png" alt="instagram">
+            </a>
+            <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/" target="_blank">
+                <img class="link-icon" src="./images/icon-linkedin.png" alt="linkedin">
+            </a>
+            <a href="https://twitter.com/guisalazarr" target="_blank">
+                <img  class="link-icon" src="./images/icon-twitter.png" alt="twitter">
+            </a>
+            <a href="https://github.com/Guisalazarr" target="_blank">
+                <img class="link-icon" src="./images/icon-github.png" alt="github">
+            </a>
+        </div>
+    </div>
 </body>
 </html>
