--- a/objetivos.html
+++ b/objetivos.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <img src="./images/foto1.jpg" alt="foto">
-    </header>
-
-    <nav>
-        <a href="./index.html">Sobre</a> <br>
-        <a href="./conhecimentos.html">Conhecimentos</a> <br>
-        <a href="./objetivos.html">objetivos</a> <br>
-    </nav>
-
-    <main>
+    <div class="bloco1">
+        <img class="foto" src="./images/foto1.jpg" alt="foto">
+        <br>
+        
+        <a href="./index.html">SOBRE</a> <br>
+        <a href="./conhecimentos.html">CONHECIMENTOS</a> <br>
+        <a href="./objetivos.html">OBJETIVOS</a> <br>
+    </div>
+    
+    <main class="bloco2">
         <ul>
             <li>Ingressar no mercado de Desenvolvimento Web.</li>
             <li>Trabalhar em uma multi nacional.</li>
