--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             </p>
         <div>
             <a href="https://www.instagram.com/guisalazarr_" target="_blank">
-                <img class="link-icon" src="./images/icon-instagram.png" alt="instagram">
+                <img class="link-icon" src="./images/instagram.png" alt="instagram">
             </a>
             <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/" target="_blank">
-                <img class="link-icon" src="./images/icon-linkedin.png" alt="linkedin">
+                <img class="link-icon" src="./images/linkedin.png" alt="linkedin">
             </a>
             <a href="https://twitter.com/guisalazarr" target="_blank">
-                <img  class="link-icon" src="./images/icon-twitter.png" alt="twitter">
+                <img  class="link-icon" src="./images/twitter.png" alt="twitter">
             </a>
             <a href="https://github.com/Guisalazarr" target="_blank">
-                <img class="link-icon" src="./images/icon-github.png" alt="github">
+                <img class="link-icon" src="./images/github.png" alt="github">
             </a>
         </div>
     </div>
