--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -12,9 +12,9 @@
         <img class="foto" src="./images/foto1.jpg" alt="foto">
         <br>
         
-        <a href="./index.html">SOBRE</a> <br>
-        <a href="./conhecimentos.html">CONHECIMENTOS</a> <br>
-        <a href="./objetivos.html">OBJETIVOS</a> <br>
+        <a href="./index.html"><strong> SOBRE</strong></a> <br>
+        <a href="./conhecimentos.html"><strong>CONHECIMENTOS </strong></a> <br>
+        <a href="./objetivos.html"> <strong>OBJETIVOS</strong></a> <br>
     </div>
     <main class="bloco2">
             <ol type="A">
