--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <script src="https://kit.fontawesome.com/f50606f180.js" crossorigin="anonymous"></script>
     
     <div class="bloco1">
         <img class="foto" src="./images/foto1.jpg" alt="foto">
         <br>
         
-        <a href="./index.html">SOBRE</a> <br>
-        <a href="./conhecimentos.html">CONHECIMENTOS</a> <br>
-        <a href="./objetivos.html">OBJETIVOS</a> <br>
+        <a href="./index.html"><strong> SOBRE</strong></a> <br>
+        <a href="./conhecimentos.html"><strong>CONHECIMENTOS </strong></a> <br>
+        <a href="./objetivos.html"> <strong>OBJETIVOS </strong></a> <br>
     </div>
 
     <div class="bloco2">
 
             <h1>GUILHERME <span>SALAZAR DA SILVA</span></h1>
             <h3>RUA ADOLFO KAUTZMAN, 93. SAPIRANGA-RS
-            <a href="http://guisalazarr@gmail.com" target="_blank"><span>GUISALAZARR@GMAIL.COM</span></a>       
+            <a href="http://guisalazarr@gmail.com" target="_blank"><span id="underline">GUISALAZARR@GMAIL.COM</span></a>       
                 51 981175661
             </h3>
             <p> Eu sou uma pessoa calma divertida e objetiva. Foco e disciplina são qualidades que
@@ -30,16 +29,16 @@
             </p>
         <div>
             <a href="https://www.instagram.com/guisalazarr_" target="_blank">
-                <img class="link-icon" src="./images/instagram.png" alt="instagram">
+                <i id="insta" class="fa-brands fa-square-instagram"></i>
             </a>
             <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/" target="_blank">
-                <img class="link-icon" src="./images/linkedin.png" alt="linkedin">
+                <i id="linkedin" class="fa-brands fa-linkedin"></i>
             </a>
             <a href="https://twitter.com/guisalazarr" target="_blank">
-                <img  class="link-icon" src="./images/twitter.png" alt="twitter">
+                <i id="twitter" class="fa-brands fa-twitter"></i>
             </a>
             <a href="https://github.com/Guisalazarr" target="_blank">
-                <img class="link-icon" src="./images/github.png" alt="github">
+                <i id="git" class="fa-brands fa-github"></i>
             </a>
         </div>
     </div>
