--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/f50606f180.js" crossorigin="anonymous"></script>
     
     <div class="bloco1">
-        <img class="foto" src="./images/foto1.jpg" alt="foto">
+        <img src="./images/foto1.jpg" alt="foto">
         <br>
         
         <a href="./index.html"><strong> SOBRE</strong></a> <br>
@@ -29,16 +29,16 @@
             </p>
         <div>
             <a href="https://www.instagram.com/guisalazarr_" target="_blank">
-                <i id="insta" class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-instagram"></i>
             </a>
             <a href="https://www.linkedin.com/in/guilherme-salazar-b20943254/" target="_blank">
-                <i id="linkedin" class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-linkedin"></i>
             </a>
             <a href="https://twitter.com/guisalazarr" target="_blank">
-                <i id="twitter" class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-twitter"></i>
             </a>
             <a href="https://github.com/Guisalazarr" target="_blank">
-                <i id="git" class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-github"></i>
             </a>
         </div>
     </div>
