--- a/objetivos.html
+++ b/objetivos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="bloco1">
-        <img class="foto" src="./images/foto1.jpg" alt="foto">
+        <img src="./images/foto1.jpg" alt="foto">
         <br>
         
         <a href="./index.html"><strong> SOBRE</strong></a> <br>
